Fixed for rsa keys hashes verification